# RAG

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_rag.py  run_web_app.py
Agentic_RAG/: agentic_app.py  agentic_main.py  agentic_rag.py  agentic_rag_readme.md  app_fixed.py  run_agentic_demo.py  run_agentic_rag.py  run_agentic_web_app.py
RAG/: __init__.py  config.py  data_ingestion.py  embeddings.py  main.py  rag_pipeline.py  retriever.py  vector_store.py
data/VectorStore/DB/3d47a563-f4ab-44e7-b2bd-93962db0df0a/: index_metadata.pickle
data/sample_data/csv_files/: hotel_food_sales.csv
data/sample_data/excel_files/: test.xlsx
data/sample_data/text_files/: script.txt
documentation/: USAGE.md  run_commands.md
notebook/: experiment.ipynb
static/css/: style.css
static/js/: script.js
templates/: agentic_index.html  index.html
